W01 Assignment: Home Page#FixingAlignmentErrors#2

--- a/styles/base.css
+++ b/styles/base.css
@@ -98,8 +98,10 @@ li {
 
 .card img {
     max-width: 25%;
+    width: 200px;
     margin-left: 20px;
     box-shadow: 0 0 20px gray;
+    object-fit: cover;
 }
 
 .card .aboutmealign {
